--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1>My Playlist</h1>
+		<div id="list">
+			<ul>
+				<li>Song 1</li>
+				<li>Song 2</li>
+				<li>Song 3</li>
+				<li>Song 4</li>
+				<li>Song 5</li>
+			</ul>
+		</div>
+		<h2>Now Playing...</h2>
+		<div id="player">
+			<video controls class="player_one">
+				<source src="https://www.w3schools.com/tags/movie.mp4" />
+				Video not supported
+			</video>
+			<h2>MP3 songs</h2>
+			<audio controls class="player_two">
+				<source title="mami meri jaan" src="https://www.pagalworld.com.se/files/download/id/64630" />
+				Audio not supported
+			</audio>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
